text-image block video added + cut off unnecessary styles in benefits + swiper container width & mobile scroll-padding fix

--- a/src/css/components/benefit.styl
+++ b/src/css/components/benefit.styl
@@ -48,27 +48,27 @@
       margin-bottom 40px
 
   &-item__text
-    h4
-      font-size 22px
-      line-height 28px
-      font-weight 500
-      margin-bottom 10px
-      @media (max-width: laptop-upper-limit)
-        font-size 20px
-        line-height 26px
-      @media (max-width: mobile-upper-limit)
-        font-size 18px
-        line-height 24px
-    p
-      font-size 16px
-      line-height 24px
-      opacity .7
-      @media (max-width: laptop-upper-limit)
-        font-size 16px
-        line-height 22px
-      @media (max-width: mobile-upper-limit)
-        font-size 14px
-        line-height 18px
+    //h4
+    //  font-size 22px
+    //  line-height 28px
+    //  font-weight 500
+    //  margin-bottom 10px
+    //  @media (max-width: laptop-upper-limit)
+    //    font-size 20px
+    //    line-height 26px
+    //  @media (max-width: mobile-upper-limit)
+    //    font-size 18px
+    //    line-height 24px
+    //p
+    //  font-size 16px
+    //  line-height 24px
+    //  opacity .7
+    //  @media (max-width: laptop-upper-limit)
+    //    font-size 16px
+    //    line-height 22px
+    //  @media (max-width: mobile-upper-limit)
+    //    font-size 14px
+    //    line-height 18px
     &-icon
       width 24px
       height 24px
