--- a/src/css/components/text-image-block.styl
+++ b/src/css/components/text-image-block.styl
@@ -22,3 +22,10 @@
         .text-image-block__image-wrapper
           padding-left 0
           padding-right 50px
+  &__video-wrapper
+    .{newAppName}-youtube
+      box-shadow none
+      border-radius 8px
+      overflow hidden
+      &--is-fullscreen
+        border-radius 0
